# Metro

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  Index.cpp  LICENSE  Metro.cpp  README.md  Repository.cpp  Repository.h  STYLE.md  error.cpp  error.h  index.html  index.html.1  index.html.2  index.html.3  index.html.4  index.html.5  index.html.6  pch.cpp  pch.h
.github/ISSUE_TEMPLATE/: bug_report.md  command-request.md  feature_request.md  other.md
.github/workflows/: all-tests.yml  latest-build.yml  main.yml  test.yml
cmake/Modules/: FindHTTP_Parser.cmake  FindPCRE2.cmake
docs/: .gitmodules  about.html  absorb.html  book.toml  branches.html  commands.html  commit.html  index.html  installation.html  introduction.html  metro-vs-git.html  print.html  repository.html  searchindex.js  searchindex.json  sync.html
docs/building/: building.html  linux.html  macos.html  windows.html
docs/commands/: basic.html  commands.html  switch.html  sync.html  wip.html
docs/src/: SUMMARY.md  about.md  absorb.md  branches.md  building.md  commands.md  commit.md  installation.md  introduction.md  metro-vs-git.md  repository.md  switch.md  sync.md  wip.md
docs/src/building/: building.md  linux.md  macos.md  windows.md
docs/src/commands/: basic.md  commands.md  switch.md  sync.md  wip.md
include/: child_process.h  commands.h  error.h  exit.h  filesystem.h  helper.h  main.h  pch.h
include/gitwrapper/: annotated_commit.h  branch.h  branch_iterator.h  commit.h  config.h  conflict_iterator.h  diff.h  error.h  index.h  object.h  oid.h  remote.h  repository.h  status_list.h  strarray.h  tag.h  tree.h  treebuilder.h  types.h
include/metro/: branch_descriptor.h  credentials.h  head.h  merging.h  metro.h  syncing.h  url_descriptor.h
src/: Metro.cpp  Repository.cpp  Repository.h  child_process.cpp  error.cpp  error.h  exit.cpp  helper.cpp  main.cpp  metro.cpp  pch.cpp  pch.h  test.cpp
src/commands/: absorb.cpp  branch.cpp  clone.cpp  commit.cpp  create.cpp  delete.cpp  fix.cpp  info.cpp  list.cpp  patch.cpp  rename.cpp  resolve.cpp  sink.cpp  switch.cpp  sync.cpp  wip.cpp
src/gitwrapper/: branch.cpp  branch_iterator.cpp  commit.cpp  config.cpp  conflict_iterator.cpp  diff.cpp  error.cpp  index.cpp  oid.cpp  remote.cpp  repository.cpp  strarray.cpp  tag.cpp  tree.cpp  treebuilder.cpp
src/metro/: branch_descriptor.cpp  credentials.cpp  merging.cpp  metro.cpp  syncing.cpp  url_descriptor.cpp
tests/: tests.bats
