cmake_minimum_required (VERSION 2.6)
set (CMAKE_CXX_STANDARD 17)
include(CheckCXXSymbolExists)
project (Metro)

set(libgitInclude $ENV{LIBGIT_INCLUDE_DIR})
IF (DEFINED libgitInclude)
    include_directories("${libgitInclude}")
ENDIF()
set(libgitBuild $ENV{LIBGIT_BUILD_DIR})

set(libsshBuild $ENV{LIBSSH_BUILD_DIR})
set(opensslRoot $ENV{OPENSSL_ROOT_DIR})

include_directories("include")
add_executable(metro src/main.cpp)

IF (WIN32)
    IF (DEFINED libgitBuild)
        add_library(git2 STATIC IMPORTED)
        set_target_properties(git2 PROPERTIES IMPORTED_LOCATION "${libgitBuild}/git2.lib")
    ENDIF()
    IF (DEFINED libsshBuild)
        add_library(libssh2 STATIC IMPORTED)
        set_target_properties(libssh2 PROPERTIES IMPORTED_LOCATION "${libsshBuild}/libssh2.lib")
    ENDIF()
    IF (DEFINED opensslRoot)
        add_library(ssl STATIC IMPORTED)
        set_target_properties(ssl PROPERTIES IMPORTED_LOCATION "${opensslRoot}/libssl.lib")
        add_library(crypto STATIC IMPORTED)
        set_target_properties(crypto PROPERTIES IMPORTED_LOCATION "${opensslRoot}/libcrypto.lib")
    ENDIF()
    target_link_libraries(metro git2 libssh2 ssl crypto winhttp Rpcrt4 crypt32)
ENDIF()
IF (UNIX)
    IF (DEFINED libgitBuild)
        add_library(git2 STATIC IMPORTED)
        set_target_properties(git2 PROPERTIES IMPORTED_LOCATION "${libgitBuild}/libgit2.a")
    ENDIF()
    IF (DEFINED libsshBuild)
        add_library(libssh2 STATIC IMPORTED)
        set_target_properties(libssh2 PROPERTIES IMPORTED_LOCATION "${libsshBuild}/libssh2.a")
    ENDIF()

    IF (APPLE)
        target_link_libraries(metro git2 pthread z crypto libssh2 pcre iconv "-framework CoreFoundation" "-framework Security")
    ELSE()
        target_link_libraries(metro git2 pthread z ssl crypto libssh2 http_parser stdc++fs pcre)
    ENDIF()
ENDIF()